# task_manager

./: .env  README.md  docker-compose.yml
backend/: README.md  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 3674e2f20c03_добавление_нового_поля.py  3e65618ee651_добавление_нового_поля.py  4e749a42572c_добавление_нового_поля.py  85560d2d9e89_добавление_нового_поля.py  96f40bde17f9_initial_migration.py  9754974ac01d_добавление_нового_поля.py  bd9ffbe56452_добавление_нового_поля.py
backend/app/api/: __init__.py  deps.py
backend/app/api/endpoints/: tasks.py  users.py  utils.py
backend/app/api/schemas/: task.py  user.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py  models.py
backend/app/repo/: base.py  task.py  user.py
backend/tests/: conftest.py
backend/tests/unit_tests/: test_api.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: LoginPage.jsx  RegisterPage.jsx  TaskCard.jsx  TaskList.jsx
